# python-crossword

./: .gitignore  README.md  pyproject.toml
app/: crossword.py  crossword_answer_generator.py  crossword_creator.py  crossword_cue_generator.py  crossword_event_loop.py  main.py  openai_response_processor.py  pdf_generator.py  structure_reader.py  words_reader.py
app/cache/: additional_words.txt  age.json  agency.json  elite.json  lane.json  nature_short_200.json  safe.json  science_long_200.json  soil.json  sports_medium_200.json
app/structures/: structure2.txt  structure3.txt  structure4.txt  structure5.txt  structure6.txt  structure7.txt
tests/: test_app.py  test_crossword_creator.py
